test/semantic/bad/jeffrey-test-lex.mC
int main(int c, char v[]){

string foo;
foo = 'aaa';

foo = "Now is the Time for All Good Men to Come to the Aid of Their Country";
foo = "It is impossible to say how first the idea entered my brain; but once conceived, it haunted me day and night.";
foo = "The quick brown fox jumps over the lazy dog.";
foo = "12Minstrel$$";

}
